--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,13 @@ registry:
   restart: always
   image: registry:2
   ports:
-    - 6000:5000
+    - 5000:5000
   environment:
     REGISTRY_AUTH: htpasswd
     REGISTRY_AUTH_HTPASSWD_PATH: /auth/htpasswd
     REGISTRY_AUTH_HTPASSWD_REALM: Registry Realm
+    REGISTRY_HTTP_TLS_CERTIFICATE: /certs/domain.crt
+    REGISTRY_HTTP_TLS_KEY: /certs/domain.key
   volumes:
     - ./data:/var/lib/registry
     - ./certs:/certs
